welcome/istio/kiali/nginx-vitrualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: asus
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pgadmin
  namespace: asus
spec:
  hosts:
    - "*"
  gateways:
    - istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /nginx
      rewrite:
        uri: /
      route:
        - destination:
            host: nginx-svc
            port:
              number: 80
